objects/Lead.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Contract To Hire</fullName>
                </value>
                <value>
                    <fullName>Direct Hire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s__c</fullName>
        <label>Contact(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>call_script__c</fullName>
        <label>call script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Person_Sourced__c</fullName>
        <label>Person Sourced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patrick Coggins</fullName>
                </value>
                <value>
                    <fullName>Rahul Merani</fullName>
                </value>
                <value>
                    <fullName>Lajja Shah</fullName>
                </value>
                <value>
                    <fullName>Jinu Philip</fullName>
                </value>
                <value>
                    <fullName>Tom Jacob</fullName>
                </value>
                <value>
                    <fullName>Sreepriya Sundaresan</fullName>
                </value>
                <value>
                    <fullName>Tracey Laubsted</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Dee Dee</fullName>
                    <isActive>false</isActive>
                    <label>Dee Dee</label>
                </value>
                <value>
                    <fullName>Deidre Holguin</fullName>
                    <isActive>false</isActive>
                    <label>Deidre Holguin</label>
                </value>
                <value>
                    <fullName>Patrick</fullName>
                    <isActive>false</isActive>
                    <label>Patrick</label>
                </value>
                <value>
                    <fullName>Rahul</fullName>
                    <isActive>false</isActive>
                    <label>Rahul</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Sourced__c</fullName>
        <label>Channel Sourced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person Meeting</fullName>
                </value>
                <value>
                    <fullName>Phone Meeting</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Linked In</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>BOD Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Referral__c</fullName>
        <label>External Referral</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received / Unqualified</fullName>
                    <default>true</default>
                    <label>Received / Unqualified</label>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Closed-Won</fullName>
                </value>
                <value>
                    <fullName>Closed-Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sourced_Date_and_Time__c</fullName>
        <label>Sourced Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Externally_Referred_by__c</fullName>
        <label>Externally Referred by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lost_Reason__c</fullName>
        <label>Opportunity Lost  Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title_of_Potential_Need__c</fullName>
        <label>Title of Potential Need</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Received_Notes__c</fullName>
        <inlineHelpText>Information Received / Notes</inlineHelpText>
        <label>Information Received / Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <validationRules>
        <fullName>Enter_Meeting_Date_and_Time</fullName>
        <active>true</active>
        <description>enter Meeting Date and Time when status is Intake Meeting Scheduled w/Client</description>
        <errorConditionFormula>IF( AND(ISPICKVAL( Status ,&quot;Intake Meeting Scheduled w/Client&quot;) ,  ISBLANK( Sourced_Date_and_Time__c )),True, False)</errorConditionFormula>
        <errorMessage>Please enter Meeting Date and Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Externally_Referred_by_is_a_Required</fullName>
        <active>true</active>
        <description>When creating a new Lead, Make &quot;Externally Referred by&quot;a Required Field dependency IF User selects: &quot;External Referral&quot; in the picklist of &quot;Person Sourced&quot; Field</description>
        <errorConditionFormula>AND(ISPICKVAL(Person_Sourced__c, &apos;External Referral&apos;) , ISBLANK(  Externally_Referred_by__c ) )</errorConditionFormula>
        <errorMessage>&quot;Externally Referred by&quot; is a Required Field if User selects: &quot;External Referral&quot; in the picklist of &quot;Person Sourced&quot; Field</errorMessage>
    </validationRules>
</CustomObject>